--- a/29.Color Picker.html
+++ b/29.Color Picker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天气查询小工具</title>
+    <title>颜色选择器</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,170 +17,117 @@
         .container {
             background: rgba(255, 255, 255, 0.1);
             padding: 2em;
-            border-radius: 30px;
-            width: 100%;
-            max-width: 420px;
-            margin: 1em;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(10px);
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
         }
-        .search {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        canvas {
+            border: 1px solid #fff;
+            cursor: crosshair;
         }
-        button {
-            margin: 0.5em;
-            border-radius: 50%;
-            border: none;
-            height: 44px;
-            width: 44px;
-            outline: none;
-            background: #7c7c7c2b;
-            color: white;
-            cursor: pointer;
-            transition: 0.2s ease-in-out;
-        }
-        input.search-bar {
-            border: none;
-            outline: none;
-            padding: 0.4em 1em;
-            border-radius: 24px;
-            background: #7c7c7c2b;
-            color: white;
-            font-family: inherit;
-            font-size: 105%;
-            width: calc(100% - 100px);
-        }
-        button:hover {
-            background: #7c7c7c6b;
-        }
-        h1.temp {
-            margin: 0;
-            margin-bottom: 0.4em;
-        }
-        .flex {
+        .color-display {
+            margin-top: 1em;
             display: flex;
             align-items: center;
         }
-        .description {
-            text-transform: capitalize;
-            margin-left: 8px;
+        .color-preview {
+            width: 50px;
+            height: 50px;
+            border: 1px solid #fff;
+            margin-right: 1em;
         }
-        .weather.loading {
-            visibility: hidden;
-            max-height: 20px;
-            position: relative;
+        .color-values {
+            display: flex;
+            flex-direction: column;
         }
-        .weather.loading:after {
-            visibility: visible;
-            content: "Loading...";
-            color: white;
-            position: absolute;
-            top: 0;
-            left: 20px;
+        input {
+            margin: 0.2em 0;
+            padding: 0.3em;
+            border: none;
+            border-radius: 3px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="search">
-            <input type="text" class="search-bar" placeholder="输入城市名">
-            <button><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.5em"
-                width="1.5em" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z">
-                </path>
-            </svg></button>
-        </div>
-        <div class="weather loading">
-            <h2 class="city">天气在 北京</h2>
-            <h1 class="temp">51°C</h1>
-            <div class="flex">
-                <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
-                <div class="description">多云</div>
+        <canvas id="colorCanvas" width="300" height="300"></canvas>
+        <div class="color-display">
+            <div id="colorPreview" class="color-preview"></div>
+            <div class="color-values">
+                <input type="text" id="hexValue" readonly>
+                <input type="text" id="rgbValue" readonly>
+                <input type="text" id="rgbaValue" readonly>
             </div>
-            <div class="humidity">湿度: 60%</div>
-            <div class="wind">风速: 6.2 km/h</div>
         </div>
     </div>
-    <script>
-        let weather = {
-            apiKey: "YOUR_API_KEY_HERE",
-            fetchWeather: function (city) {
-                document.querySelector(".loader").style.display = "block";
-                fetch(
-                    "https://api.openweathermap.org/data/2.5/weather?q=" +
-                    city +
-                    "&units=metric&appid=" +
-                    this.apiKey
-                )
-                .then((response) => {
-                    if (!response.ok) {
-                        if (response.status === 404) {
-                            throw new Error("城市未找到。请检查城市名称是否正确。");
-                        } else if (response.status === 401) {
-                            throw new Error("API密钥无效。请检查您的API密钥。");
-                        } else {
-                            throw new Error("获取天气数据时出错。请稍后再试。");
-                        }
-                    }
-                    return response.json();
-                })
-                .then((data) => {
-                    this.displayWeather(data);
-                    document.querySelector(".loader").style.display = "none";
-                })
-                .catch((error) => {
-                    this.displayError(error.message);
-                    document.querySelector(".loader").style.display = "none";
-                });
-            },
-            displayWeather: function (data) {
-                const { name } = data;
-                const { icon, description } = data.weather[0];
-                const { temp, humidity } = data.main;
-                const { speed } = data.wind;
-                document.querySelector(".city").innerText = "天气在 " + name;
-                document.querySelector(".icon").src =
-                    "https://openweathermap.org/img/wn/" + icon + ".png";
-                document.querySelector(".description").innerText = description;
-                document.querySelector(".temp").innerText = temp + "°C";
-                document.querySelector(".humidity").innerText =
-                    "湿度: " + humidity + "%";
-                document.querySelector(".wind").innerText =
-                    "风速: " + speed + " km/h";
-                document.querySelector(".weather").classList.remove("loading");
-                document.body.style.backgroundImage =
-                    "url('https://source.unsplash.com/1600x900/?" + name + "')";
-            },
-            displayError: function (message) {
-                document.querySelector(".city").innerText = "错误";
-                document.querySelector(".icon").src = "";
-                document.querySelector(".description").innerText = message;
-                document.querySelector(".temp").innerText = "";
-                document.querySelector(".humidity").innerText = "";
-                document.querySelector(".wind").innerText = "";
-                document.querySelector(".weather").classList.remove("loading");
-            },
-            search: function () {
-                this.fetchWeather(document.querySelector(".search-bar").value);
-            },
-        };
 
-        document.querySelector(".search button").addEventListener("click", function () {
-            weather.search();
+    <script>
+        const canvas = document.getElementById('colorCanvas');
+        const ctx = canvas.getContext('2d');
+        const colorPreview = document.getElementById('colorPreview');
+        const hexValue = document.getElementById('hexValue');
+        const rgbValue = document.getElementById('rgbValue');
+        const rgbaValue = document.getElementById('rgbaValue');
+
+        function drawColorWheel() {
+            const centerX = canvas.width / 2;
+            const centerY = canvas.height / 2;
+            const radius = Math.min(centerX, centerY);
+
+            for (let angle = 0; angle < 360; angle++) {
+                const startAngle = (angle - 2) * Math.PI / 180;
+                const endAngle = (angle + 2) * Math.PI / 180;
+
+                ctx.beginPath();
+                ctx.moveTo(centerX, centerY);
+                ctx.arc(centerX, centerY, radius, startAngle, endAngle);
+                ctx.closePath();
+
+                const gradient = ctx.createRadialGradient(centerX, centerY, 0, centerX, centerY, radius);
+                gradient.addColorStop(0, 'hsl(' + angle + ', 100%, 100%)');
+                gradient.addColorStop(1, 'hsl(' + angle + ', 100%, 50%)');
+
+                ctx.fillStyle = gradient;
+                ctx.fill();
+            }
+        }
+
+        function rgbToHex(r, g, b) {
+            return '#' + [r, g, b].map(x => {
+                const hex = x.toString(16);
+                return hex.length === 1 ? '0' + hex : hex;
+            }).join('');
+        }
+
+        function updateColorValues(x, y) {
+            const imageData = ctx.getImageData(x, y, 1, 1).data;
+            const [r, g, b, a] = imageData;
+
+            const hex = rgbToHex(r, g, b);
+            const rgb = `rgb(${r}, ${g}, ${b})`;
+            const rgba = `rgba(${r}, ${g}, ${b}, ${(a / 255).toFixed(2)})`;
+
+            colorPreview.style.backgroundColor = rgb;
+            hexValue.value = hex;
+            rgbValue.value = rgb;
+            rgbaValue.value = rgba;
+        }
+
+        canvas.addEventListener('mousemove', (event) => {
+            const rect = canvas.getBoundingClientRect();
+            const x = event.clientX - rect.left;
+            const y = event.clientY - rect.top;
+            updateColorValues(x, y);
         });
 
-        document
-            .querySelector(".search-bar")
-            .addEventListener("keyup", function (event) {
-                if (event.key == "Enter") {
-                    weather.search();
-                }
-            });
+        canvas.addEventListener('click', (event) => {
+            const rect = canvas.getBoundingClientRect();
+            const x = event.clientX - rect.left;
+            const y = event.clientY - rect.top;
+            updateColorValues(x, y);
+        });
 
-        weather.fetchWeather("北京");
+        drawColorWheel();
     </script>
 </body>
 </html>
